Refactored quest module
